--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -26,7 +26,13 @@
 .home {
     width: 75%;
     float: right;
+    position: relative;
+    z-index: 10;
 }
+
+/* .home a {
+    padding-left: 12%;
+} */
 
 .sidebar li.active::before {
     border-left: 5px solid blueviolet;
