--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -1,13 +1,13 @@
 #left_sidebar {
     position: absolute;
-    width: 25%;
+    width: 15%;
     height: 100vh;
     float: left;
 }
 
 #left_sidebar_fixed {
     position: fixed;
-    width: 20%;
+    width: 15%;
     height: 100vh;
     float: left;
     top: 7.5px;
@@ -23,34 +23,41 @@
     display: none;
 }
 
+#root_bullet_point {
+    cursor: pointer;
+}
+
+#root_bullet_point:hover {
+    color: white;
+}
+
 .home {
-    width: 75%;
+    width: 80%;
     float: right;
     position: relative;
     z-index: 10;
 }
 
-/* .home a {
-    padding-left: 12%;
-} */
+.bullet_point {
+    cursor: default;
+    color: black;
+}
 
-.sidebar li.active::before {
-    border-left: 5px solid blueviolet;
+.bullet_point_selected {
+    cursor: default;
+    color: blueviolet;
+}
+
+.bullet_point:hover {
+    color: darkgray;
 }
 
 .sidebar li {
     list-style-type: none;
 }
 
-.sidebar li::before {
-    content: "";
-    display: inline-block;
-    width: 0;
-    height: 0;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-    border-left: 5px solid black;
-    margin-right: 0.5em;
+#home_li {
+    list-style-type: initial;
 }
 
 @media screen and (max-width: 1000px) {
