giscus now shows post based on title

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -69,9 +69,9 @@ layout: default
   </div>
 
   <script src="https://giscus.app/client.js" data-repo="bane9/bane9.github.io" data-repo-id="R_kgDOJzR5Jg"
-    data-category="General" data-category-id="DIC_kwDOJzR5Js4CXdBE" data-mapping="pathname" data-strict="0"
-    data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="dark" data-lang="en"
-    crossorigin="anonymous" async>
+    data-category="General" data-category-id="DIC_kwDOJzR5Js4CXdBE" data-mapping="specific" data-term="{{ page.title }}"
+    data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="dark"
+    data-lang="en" crossorigin="anonymous" async>
     </script>
 
 </article>
