Make scroll to top button unselectable

--- a/_includes/scroll_to_top.html
+++ b/_includes/scroll_to_top.html
@@ -10,6 +10,7 @@
         bottom: 20px;
         right: 20px;
         z-index: 99;
+        user-select: none;
     }
 
     .scroll-to-top-button {
@@ -22,6 +23,7 @@
         font-size: 24px;
         line-height: 40px;
         border-radius: 50%;
+        user-select: none;
     }
 
     .scroll-to-top-button:hover {
