--- a/assets/sidebar.css
+++ b/assets/sidebar.css
@@ -1,25 +1,26 @@
 #left_sidebar {
     position: absolute;
-    width: 15%;
+    max-width: 225px;
     height: 100vh;
     float: left;
     display: block;
-    max-width: fit-content;
+    margin: auto;
 }
 
 #left_sidebar_fixed {
     position: fixed;
-    width: 15%;
+    max-width: 225px;
     height: 100vh;
     float: left;
     top: 7.5px;
     display: block;
-    max-width: fit-content;
 }
 
 .post {
-    width: 80%;
+    width: 75%;
     float: right;
+    z-index: 1;
+    margin: auto;
 }
 
 #inline_sidebar {
