switch from iframe to video

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 {%- assign github_username=site.data.socials.github -%}
 
+<link rel="stylesheet" href="/assets/post.css">
 <link rel="stylesheet" href="/assets/sidebar.css">
 <div class="sidebar" id="left_sidebar"></div>
 
