--- a/_includes/scroll_to_top.html
+++ b/_includes/scroll_to_top.html
@@ -32,9 +32,7 @@
 </style>
 
 <script>
-    window.onscroll = function () {
-        scrollFunction();
-    };
+    window.addEventListener("scroll", scrollFunction);
 
     function scrollFunction() {
         var scrollButton = document.getElementById("scroll-to-top");
