--- a/_includes/scroll_to_top.html
+++ b/_includes/scroll_to_top.html
@@ -23,6 +23,7 @@
         font-size: 24px;
         line-height: 40px;
         border-radius: 50%;
+        font-family: Arial, Helvetica, sans-serif;
         user-select: none;
     }
 
